--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
-    "react-native-pager-view": "6.2.0"
+    "react-native-pager-view": "6.2.0",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
